# vox2brs

./: .gitignore  .gitmodules  Cargo.toml  README.md  test.vox
vox2brs/: Cargo.toml
vox2brs-cli/: Cargo.toml
vox2brs-cli/src/: main.rs
vox2brs-gui/: Cargo.toml
vox2brs-gui/src/: app.rs  main.rs
vox2brs/src/: lib.rs
