[package]
name = "vox2brs-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
create_vox = { git = "https://github.com/Wrapperup/create_vox" }
clap = { version = "3.0.5", features = ["derive"] }
vox2brs = { path = "../vox2brs" }
brickadia = "0.1.24"