[package]
name = "vox2brs-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.16.0" # Gives us egui, epi and web+native backends
brickadia = "0.1.24"
create_vox = { git = "https://github.com/Wrapperup/create_vox" }
rampifier = { git = "https://github.com/Wrapperup/rampifier" }
nfd2 = "0.3.0"
vox2brs = { path = "../vox2brs" }
dirs = "4.0.0"